Implemented upgrades, checkouts from inventory menu, and processing menu when scanning.
